--- a/src/app/components/add-task-component/add-task-component.html
+++ b/src/app/components/add-task-component/add-task-component.html
@@ -2,5 +2,6 @@
     <div class="form-control">
         <label for="">Task</label>
         <input type="text" id="text" placeholder="Add Task" />
+        {{ title }}
     </div>
 </form>
